<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.lezhian.academiccircle.fragment.MineFragment">

    <include
        layout="@layout/common_top_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <com.lezhian.academiccircle.widget.RoundImageView
                    android:id="@+id/iv_headImage"
                    android:src="@mipmap/app_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginStart="36dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/tv_isLogin"
                    android:text="@string/notLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

                <include layout="@layout/common_bottom_view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountManage"
                    android:id="@+id/tv_account_manage"
                    android:layout_marginLeft="34dp"
                    android:layout_marginStart="34dp"
                    android:layout_alignTop="@+id/tv_isLogin"
                    android:layout_toRightOf="@+id/tv_isLogin"
                    android:layout_toEndOf="@+id/tv_isLogin"/>

            </RelativeLayout>

            <TextView
                style="@style/style_tv_title"
                android:text="@string/academicHeadLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>

            <TextView
                android:text="@string/subscribeTopic"
                style="@style/style_tv_item"
                android:id="@+id/tv_subscribe_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>

            <TextView
                android:text="@string/headLineSave"
                style="@style/style_tv_item"
                android:id="@+id/tv_headLine_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>


            <TextView
                style="@style/style_tv_title"
                android:text="@string/academicCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>

            <TextView
                android:text="@string/myPage"
                style="@style/style_tv_item"
                android:id="@+id/tv_my_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>

            <TextView
                android:text="@string/message"
                style="@style/style_tv_item"
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>

            <TextView
                android:text="@string/academicConcern"
                style="@style/style_tv_item"
                android:id="@+id/tv_academic_concern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>
            <TextView
                android:text="@string/academicSave"
                style="@style/style_tv_item"
                android:id="@+id/tv_academic_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <include layout="@layout/common_bottom_view"/>





















        </LinearLayout>

    </ScrollView>

</LinearLayout>
