<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lezhian.academiccircle.activity.PublishActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/common_top_title"/>

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_margin="8dp"
                android:id="@+id/tv_title"
                android:hint="@string/publishTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_margin="8dp"
                android:id="@+id/tv_content"
                android:hint="@string/publishContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


         <TextView
             android:textSize="20sp"
             android:textColor="@color/gray"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:text="@string/addHobbyTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>





    </LinearLayout>








</ScrollView>
