<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lezhian.academiccircle.activity.ResetPasswordActivity">

    <include
        layout="@layout/common_top_title"/>

    <RelativeLayout
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/image"
            android:src="@mipmap/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/settingPassword"
            android:layout_width="wrap_content"
            style="@style/style_editText"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image"/>

    </RelativeLayout>

    <TextView
        android:text="@string/doNotForgetNewPassword"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





<Button
android:layout_marginTop="30dp"
android:text="@string/goLogin"
android:id="@+id/btn_login"
android:gravity="center"
android:layout_width="324dp"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"/>






    </LinearLayout>
