<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lezhian.academiccircle.activity.ModifyMessageActivity">


    <include layout="@layout/common_top_title"/>

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

       <TextView
           android:id="@+id/tv_job_modify"
           android:text="@string/jobsModify"
            android:padding="5dp"
           android:textSize="20sp"
           android:layout_margin="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>

 <TextView
           android:id="@+id/tv_person_introduction"
           android:text="@string/personIntroduction"
           android:textSize="20sp"
           android:padding="5dp"
           android:layout_margin="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
 <TextView
           android:id="@+id/tv_achievements_modify"
           android:text="@string/achievementsModify"
           android:textSize="20sp"
           android:padding="5dp"
           android:layout_margin="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>
