<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.MainActivity">


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divide"
        android:layout_alignParentTop="true">

    </FrameLayout>

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/activity_group_radioGroup"
        android:background="#cccccc"/>

    <RadioGroup
        android:id="@+id/activity_group_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:checkedButton="@+id/order_process"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">

        <RadioButton
            android:id="@+id/rb_headline"
            style="@style/main_tab_bottom"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_first"
            android:text="@string/headline"/>

        <RadioButton
            android:id="@+id/rb_academicCircle"
            style="@style/main_tab_bottom"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:checked="false"
            android:drawableTop="@drawable/main_tab_second"
            android:gravity="center"
            android:text="@string/academicCircle"/>

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/main_tab_bottom"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:checked="false"
            android:drawableTop="@drawable/main_tab_third"
            android:gravity="center"
            android:text="@string/mine"/>


    </RadioGroup>


</RelativeLayout>
