<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lezhian.academiccircle.activity.LoginActivity">
    <include
        layout="@layout/common_top_title"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:src="@mipmap/phone"
                android:layout_marginLeft="10dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <com.lezhian.academiccircle.widget.EditText.XEditText
                android:id="@+id/et_phoneNumber"
                android:inputType="phone"
                android:layout_marginLeft="25dp"
                android:hint="@string/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_marginStart="25dp"/>
        </RelativeLayout>
        <include layout="@layout/common_bottom_view"/>
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/image"
                android:src="@mipmap/lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />

            <com.lezhian.academiccircle.widget.EditText.XEditText
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/image"
                android:layout_toEndOf="@+id/image"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:text="@string/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
